 - Rename SubMesh data "global_vertex_indices" --> "parent_vertex_indices"
 - Get XML input/output of boundary markers working again
 - Get FacetArea working again
1.0-beta [2011-08-11]
 - Print percentage of non-zero entries when computing sparsity patterns
 - Use ufl.Real for Constant in Python interface
 - Add Dirichlet boundary condition argument to Python project function
 - Add remove functionality for parameter sets
 - Added out typemap for vector of shared_ptr objects
 - Fix typemap bug for list of shared_ptr objects
 - Support parallel XML vector io
 - Add support for gzipped XML output
 - Use pugixml for XML output
 - Move XML SAX parser to libxml2 SAX2 interface
 - Simplify XML io
 - Change interface for variational problems, class VariationalProblem removed
 - Add solve interface: solve(a == L), solve(F == 0)
 - Add new classes Linear/NonlinearVariationalProblem
 - Add new classes Linear/NonlinearVariationalSolver
 - Ad form class aliases ResidualForm and Jacobian form in wrapper code
 - Default argument to variables in Expression are passed as kwargs in the
   Python interface
 - Add has_openmp as utility function in Python interface
 - Add improved error reporting using dolfin_error
 - Use Boost to compute Legendre polynolials
 - Remove ode code
 - Handle parsing of unrecognized command-line parameters
 - All const std::vector<foo>& now return a read-only NumPy array
 - Make a robust macro for generating a NumPy array from data
 - Exposing low level fem functionality to Python, by adding a
   Cell -> ufc::cell typemap
 - Added ufl_cell as a method to Mesh in Python interface
 - Fix memory leak in Zoltan interface
 - Remove some 'new' for arrays in favour of std::vector
 - Added cell as an optional argument to Constant
 - Prevent the use of non contiguous NumPy arrays for most typemaps
 - Point can now be used to evaluate a Function or Expression in Python
 - Fixed dimension check for Function and Expression eval in Python